Trying to fix isdigit (Not Stable)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "xutility": "c",
         "lexer.h": "c",
         "tokentype.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
